profile post alignment fixed

--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -558,7 +558,7 @@ input:focus ~ .highlight {
     background-color: #FFF;
     width: 600px;
     height: 200px;
-    margin: 10px auto 0 auto;
+    margin: 10px auto 0px auto;
     font-family: 'Roboto';
     box-shadow: 1px 1px 1px 1px #aaa;
     border-radius: 10px 10px 0px 0px;
@@ -600,8 +600,7 @@ input:focus ~ .highlight {
 .profile-content {
     background-color: #FFF;
     width: 560px;
-    height: calc(100% - 210px);
-    margin: 10px auto 0 auto;
+    margin: 10px auto 0px auto;
     font-family: 'Roboto';
     box-shadow: 1px 1px 1px 1px #aaa;
 }
@@ -609,9 +608,8 @@ input:focus ~ .highlight {
 .profile-content {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    padding: 120px 20px 20px 20px;
+    padding: 10px 20px 20px 20px;
 }
 
 .profile-post-content {
@@ -624,7 +622,7 @@ input:focus ~ .highlight {
     border-radius: 5px;
     transition: border 0.2s ease-in-out;
     width: 500px;
-    margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 .profile-post-content:hover {
